[gd_scene load_steps=2 format=2]

[ext_resource path="res://Box/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="Collisor" type="CollisionShape2D" parent="."]

[node name="InvenciblityTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="InvenciblityTimer" to="." method="_on_InvenciblityTimer_timeout"]
